<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <com.spiritwisestudios.inkrollers.GameView
      android:id="@+id/game_view"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <com.spiritwisestudios.inkrollers.TimerHudView
      android:id="@+id/timer_hud_view"
      android:layout_width="90dp"
      android:layout_height="60dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="80dp"
      android:layout_marginEnd="16dp" />

  <com.spiritwisestudios.inkrollers.InkHudView
      android:id="@+id/ink_hud_view"
      android:layout_width="80dp"
      android:layout_height="150dp"
      app:layout_constraintTop_toBottomOf="@id/coverage_hud_view"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="16dp"
      android:layout_marginTop="64dp" />

  <com.spiritwisestudios.inkrollers.CoverageHudView
      android:id="@+id/coverage_hud_view"
      android:layout_width="0dp"
      android:layout_height="32dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <com.spiritwisestudios.inkrollers.ZoneHudView
      android:id="@+id/zone_hud_view"
      android:layout_width="127dp"
      android:layout_height="71dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="8dp"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/timer_hud_view" />

  <Button
      android:id="@+id/btn_toggle_p2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="P2 Toggle"
      app:layout_constraintBottom_toTopOf="@+id/btn_toggle"
      app:layout_constraintEnd_toEndOf="@+id/btn_toggle"
      android:layout_marginBottom="8dp" />

  <Button
      android:id="@+id/btn_toggle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="P1 Toggle"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>